--- a/WaterLevelControllerClient/Pages/Index.razor
+++ b/WaterLevelControllerClient/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>WaterLevelController</h1>
 
-Welcome to your new app.
+Gyulai Levente - HAAL5B
 
-<SurveyPrompt Title="How is Blazor working for you?" />
