--- a/WaterLevelControllerClient/Pages/SensorPage.razor
+++ b/WaterLevelControllerClient/Pages/SensorPage.razor
@@ -54,7 +54,7 @@ else
     <span>Loading...</span>
 }
 
-<!-- Create zone modal -->
+<!-- Create sensor modal -->
 @if (createSensor != null)
 {
     <div class="modal fade" id="createSensorModal" tabindex="-1" role="dialog">
@@ -82,7 +82,7 @@ else
     </div>
 }
 
-<!-- Delete schedule modal -->
+<!-- Delete sensor modal -->
 <div class="modal fade" id="deleteSensorModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -100,7 +100,7 @@ else
 
 @if (editSensor != null)
 {
-    <!-- Edit zone modal -->
+    <!-- Edit sensor modal -->
     <div class="modal fade" id="editSensorModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
