--- a/WaterLevelControllerClient/Pages/SwitchPage.razor
+++ b/WaterLevelControllerClient/Pages/SwitchPage.razor
@@ -48,7 +48,7 @@ else
     <span>Loading...</span>
 }
 
-<!-- Create zone modal -->
+<!-- Create switch modal -->
 @if (createSwitch != null)
 {
     <div class="modal fade" id="createSwitchModal" tabindex="-1" role="dialog">
@@ -77,7 +77,7 @@ else
 }
 
 
-<!-- Delete schedule modal -->
+<!-- Delete switch modal -->
 <div class="modal fade" id="deleteSwitchModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -96,7 +96,7 @@ else
 
 @if (editSwitch != null)
 {
-    <!-- Edit zone modal -->
+    <!-- Edit switch modal -->
     <div class="modal fade" id="editSwitchModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
